k8s/dep/1.initial_app_configuration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottles-dep-v1
  labels:
    app: bottles
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottles
      version: v1
  template:
    metadata:
      labels:
        app: bottles
        version: v1
    spec:
      containers:
      - name: bottles
        image: meshery20/bottle-producer:1.1.0
        ports:
        - containerPort: 3002
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottles-dep-v2
  labels:
    app: bottles
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottles
      version: v2
  template:
    metadata:
      labels:
        app: bottles
        version: v2
    spec:
      containers:
      - name: bottles
        image: meshery20/bottle-producer:1.1.0
        ports:
        - containerPort: 3002
        imagePullPolicy: Always
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiogateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - factory-gateway
  http:
    - match:
      - uri:
          exact: "/"
      - uri:
          exact: ""
      - uri:
          prefix: "/static"
      route:
      - destination:
          port:
            number: 80
          host: frontend
          subset: v1
        weight: 90
      - destination:
          port:
            number: 80
          host: frontend
          subset: v2
        weight: 10
    - match:
      - uri:
          exact: "/api"
      route:
      - destination:
          port:
            number: 3000
          host: bottling-plant
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: factory-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  labels:
    app: frontend
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
      - name: frontend
        image: meshery20/frontend:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - name: frontend
        image: meshery20/frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    service: frontend
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: drinks
spec:
  hosts:
  - drinks
  http:
  - route:
    - destination:
        host: drinks
        subset: v1
      weight: 30
    - destination:
        host: drinks
        subset: v2
      weight: 40
    - destination:
        host: drinks
        subset: v3
      weight: 30
---
apiVersion: v1
kind: Service
metadata:
  name: drinks
  labels:
    app: drinks
    service: drinks
spec:
  ports:
  - port: 3001
    name: grpc
  selector:
    app: drinks
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: drinks
spec:
  host: drinks
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drinks-v3
  labels:
    app: drinks
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drinks
      version: v3
  template:
    metadata:
      labels:
        app: drinks
        version: v3
    spec:
      containers:
      - name: drinks
        image: meshery20/drink-producer:v3
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drinks-v2
  labels:
    app: drinks
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drinks
      version: v2
  template:
    metadata:
      labels:
        app: drinks
        version: v2
    spec:
      containers:
      - name: drinks
        image: meshery20/drink-producer:v2
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drinks-v1
  labels:
    app: drinks
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drinks
      version: v1
  template:
    metadata:
      labels:
        app: drinks
        version: v1
    spec:
      containers:
      - name: drinks
        image: meshery20/drink-producer:v1
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: bottling-plant
  labels:
    app: bottling-plant
    service: bottling-plant
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: bottling-plant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottling-plant
  labels:
    app: bottling-plant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottling-plant
  template:
    metadata:
      labels:
        app: bottling-plant
    spec:
      containers:
      - name: bottling-plant
        image: meshery20/bottling-plant
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bottles-vs
spec:
  hosts:
  - bottles
  http:
  - route:
    - destination:
        host: bottles
        subset: v1
      weight: 33
    - destination:
        host: bottles
        subset: v2
      weight: 34
    - destination:
        host: bottles
        subset: v3
      weight: 33
---
apiVersion: v1
kind: Service
metadata:
  name: bottles
  labels:
    app: bottles
    service: bottles
spec:
  type: LoadBalancer
  ports:
  - port: 3002
    name: grpc
  selector:
    app: bottles
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bottles
spec:
  host: bottles
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottles-dep-v3
  labels:
    app: bottles
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottles
      version: v3
  template:
    metadata:
      labels:
        app: bottles
        version: v3
    spec:
      containers:
      - name: bottles
        image: meshery20/bottle-producer:1.1.0
        ports:
        - containerPort: 3002
        imagePullPolicy: Always
