k8s/dep/2.reduce_drinks_service_errors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drinks-v1
  labels:
    app: drinks
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drinks
      version: v1
  template:
    metadata:
      labels:
        app: drinks
        version: v1
    spec:
      containers:
      - name: drinks
        image: meshery20/drink-producer:v1
        ports:
        - containerPort: 3001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: drinks
spec:
  hosts:
  - drinks
  http:
  - route:
    - destination:
        host: drinks
        subset: v1
