k8s/dep/3.reduce_bottle_services_time.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottles-dep-new-line
  labels:
    app: bottles
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottles
      version: v3
  template:
    metadata:
      labels:
        app: bottles
        version: v3
    spec:
      containers:
      - name: bottles
        image: meshery20/bottle-producer:1.1.0
        ports:
        - containerPort: 3002
        imagePullPolicy: Always
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bottles-vs
spec:
  hosts:
  - bottles
  http:
  - route:
    - destination:
        host: bottles
        subset: v1
      weight: 10
    - destination:
        host: bottles
        subset: v2
      weight: 10
    - destination:
        host: bottles
        subset: v3
      weight: 80
