k8s/dep/4.cannary_relase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v3
  labels:
    app: frontend
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v3
  template:
    metadata:
      labels:
        app: frontend
        version: v3
    spec:
      containers:
      - name: frontend
        image: meshery20/frontend:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiogateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - factory-gateway
  http:
    - match:
      - uri:
          exact: "/"
      - uri:
          exact: ""
      - uri:
          prefix: "/static"
      route:
      - destination:
          port:
            number: 80
          host: frontend
          subset: v2
        weight: 2
      - destination:
          port:
            number: 80
          host: frontend
          subset: v3
        weight: 1
    - match:
      - uri:
          exact: "/api"
      route:
      - destination:
          port:
            number: 3000
          host: bottling-plant
